# tetherplay

./: .gitignore  2  Cargo.toml  Makefile  README.md  build.rs  client.js  handle-input.js  index.html  joystick-test.html  less  package-lock.json  package.json  redshift.js  server.js  settings.html  stddump  style.css  test.html  test.json  testStyle.html  tetherplay-fhs.nix  tpinput.js  ws.js
c_uinput/: main  main.c
c_uinput/device/: device.c  device.h
c_uinput/headers/: buttons.h  device.h
c_uinput/json/: command_line_api.json
client-scripts/: checks.js  configuration.js  control.js  controlMap.js  eventMap.js  input.js  mode.js  settings.js  style.js  visibility.js
rust-uinput/: Cargo.toml
src/: api.h  cli.yml  controller_hashmap.rs  device.c  device.rs  errutil.h  infodump.c  json_api.c  main.rs  tpinput.c  tpinput.h
src/device/: controller_hashmap.rs
src/lib/: Makefile  device.c  device.h  device.rs
style/: black.css  dark.css  default.css  playstation.css  settings-style.css  style.css  style.js  xbox-ps-buttons.glyphs
tpinput/: Makefile  api.h  device.h  json_api.h  requirements  test.json
virtural_input/: input_test.c
webserver/: index.html  package-lock.json  package.json  ws.js
webserver/client-scripts/: input.js  mode.js  visibility.js
webserver/components/: dpad.html
webserver/style/: black.css  dark.css
