[package]
name = "tpinput"
version = "0.1.0"
authors = ["Niall Bermingham <niallbermingham4@mail.dcu.ie>"]
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2.84"
uinput-sys = "0.1.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[build-dependencies]
cc = "1.0.66"
name = "tetherplay-uinput"
version = "0.1.0"
authors = ["Niall Bermingham <niallbermingham4@mail.dcu.ie>", "Jordan Conway-McLaughlin <jordan.conwaymclaughlin24@mail.dcu.ie>" ]
edition = "2018"

[dependencies]
uinput = "0.1.3"
inner = "0.1.1"
